  the same parameters.
- Fix that memory allocation measurements are disabled if the
  user explicitly specifies --memory
- Fix conflict of function wrapping with IPA on BlueGene systems.
- Do not preprocess assembler files anymore.
- Fix race condition in parallel make (make -j). Note that parallel
  'make check' still exhibits race conditions due to Fortran
  dependency issues.

------------------- Released version 3.0 -----------------------------

Note: In this version, we switch from a 'major.minor.bugfix'
versioning scheme to a 'major.bugfix' scheme. New user-relevant
features will be introduced by increasing the major number. Bugfix
releases will not add new user-relevant features but might contain,
in addition to bugfixes, Score-P-internal improvements.

Major features:

- Support for instrumentation of OpenACC codes based on the profiling
  interface specified in OpenACC 2.5.

Features and improvements:

- Extract topology information from the Slurm topology/tree plugin to
  create the system tree.  This feature is available in Slurm since
  version 2.1 (around 09/2009) and documented since 01/2014.  Please
  refer to the Slurm documentation how to enable this feature:
    http://slurm.schedmd.com/topology.html
- Change PGI C++ compiler settings (selected via
  --with-nocross-compiler-suite=pgi) from pgCC to pgc++. PGI removed
  pgCC in version 16.1. If your installation still provides pgCC and
  you want to use it, please add CXX=pgCC to your configure line.

Bugfixes:

- Prevent sampling/unwinding when Intel MPI is used. This combination,
  even when sampling is not active, may mysteriously alter the
  application output just by linking libunwind.
- Fixed possible underestimation of the trace size and memory footprint
  in scorep-score due to counting timestamps only for enter/leave
  records.
- Fixed function signatures of SHMEM API functions that changed in
  Open MPI 2.0.

------------------- Released version 2.0.2 ---------------------------
